--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 
-BERNARDO GESSER DE CAMPOS <bernardo.gesser.campos@escola.pr.gov.br>
-09:42 (há 13 minutos)
-para mim
+
 
 style>
         body {
@@ -16,12 +14,12 @@ style>
             background-color: #1f1f1f;
             padding: 30px;
             text-align: center;
-            border-bottom: 3px solid #00ffcc;
+            border-bottom: 3px solid #ae00ff;
         }
 
         h1 {
 
-            color: #00ffcc;
+            color: #ff00c8;
             font-size: 3em;
             margin: 0;
         }
@@ -49,7 +47,7 @@ style>
         iframe {
             margin-top: 30px;
             border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 255, 204, 0.4);
+            box-shadow: 0 0 15px rgba(255, 0, 234, 0.4);
         }
     </style>
 
